lb-sg.tf
resource "aws_security_group" "lb-sg" {
  name        = var.lb_sg_name
  description = "Allow HTTP for load balancer"
  vpc_id      = aws_vpc.myvpc.id

  ingress {
    description      = "HTTP from World"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = var.lb_sg_name
  }
}
